Academic Projects/csc510/csc510assn2/optimize5/parser.out
Created by PLY version 3.0 (http://www.dabeaz.com/ply)

Grammar

Rule 1     S' -> goal
Rule 2     goal -> stmtlist
Rule 3     stmtlist -> stmtrest statement
Rule 4     stmtrest -> stmtrest statement
Rule 5     stmtrest -> epsilon
Rule 6     statement -> assign
Rule 7     statement -> expression SEP
Rule 8     assign -> varassign SEP
Rule 9     assign -> funcassign
Rule 10    varassign -> typedecl ID ASSIGN_OP expression
Rule 11    funcassign -> typedecl ID ASSIGN_OP FUNCTION LPAREN paramlist pushToSymTable RPAREN LBRACE stmtrest RETURN expression SEP RBRACE
Rule 12    pushToSymTable -> epsilon
Rule 13    paramlist -> typedecl ID paramrest
Rule 14    paramlist -> epsilon
Rule 15    paramrest -> paramrest COMMA typedecl ID
Rule 16    paramrest -> epsilon
Rule 17    expression -> expression ADD_OP expression
Rule 18    expression -> expression SUBTRACT_OP expression
Rule 19    expression -> expression MULTIPLY_OP expression
Rule 20    expression -> expression DIVIDE_OP expression
Rule 21    expression -> expression MODULO_OP expression
Rule 22    expression -> expression EQ_OP expression
Rule 23    expression -> expression NE_OP expression
Rule 24    expression -> expression GT_OP expression
Rule 25    expression -> expression GE_OP expression
Rule 26    expression -> expression LT_OP expression
Rule 27    expression -> expression LE_OP expression
Rule 28    expression -> expression LOGAND_OP expression
Rule 29    expression -> expression LOGOR_OP expression
Rule 30    expression -> expression TILDE_OP expression
Rule 31    expression -> SUBTRACT_OP expression
Rule 32    expression -> LOGNOT_OP expression
Rule 33    expression -> LENGTH LPAREN ID RPAREN
Rule 34    expression -> INT LPAREN expression RPAREN
Rule 35    expression -> FLOAT LPAREN expression RPAREN
Rule 36    expression -> STRING LPAREN expression RPAREN
Rule 37    expression -> expression QUESTION_OP expression COLON_OP expression
Rule 38    expression -> LPAREN expression RPAREN
Rule 39    expression -> scalarvalue
Rule 40    expression -> arrayvalues
Rule 41    expression -> ID subscript
Rule 42    subscript -> LBRACK expression RBRACK
Rule 43    subscript -> epsilon
Rule 44    expression -> exprfuncall
Rule 45    expression -> exprparallel
Rule 46    exprfuncall -> ID LPAREN arglist RPAREN
Rule 47    arglist -> expression argrest
Rule 48    arglist -> epsilon
Rule 49    argrest -> argrest COMMA expression
Rule 50    argrest -> epsilon
Rule 51    exprparallel -> LBRACE LBRACE parallelOp parallelFuncs RBRACE RBRACE
Rule 52    parallelOp -> REDUCE reduceop reduceinit
Rule 53    parallelOp -> COLLECT
Rule 54    reduceop -> ADD_OP
Rule 55    reduceop -> SUBTRACT_OP
Rule 56    reduceop -> MULTIPLY_OP
Rule 57    reduceop -> DIVIDE_OP
Rule 58    reduceop -> MODULO_OP
Rule 59    parallelFuncs -> exprfuncall SEP exprfuncall SEP parallelMoreFuncs
Rule 60    parallelMoreFuncs -> parallelMoreFuncs exprfuncall SEP
Rule 61    parallelMoreFuncs -> epsilon
Rule 62    reduceinit -> scalarvalue
Rule 63    reduceinit -> epsilon
Rule 64    scalarvalue -> FLOATNUMBER
Rule 65    scalarvalue -> INTNUMBER
Rule 66    scalarvalue -> STRINGCONSTANT
Rule 67    arrayvalues -> LBRACK arrayelements RBRACK
Rule 68    arrayelements -> expression moreelements
Rule 69    arrayelements -> epsilon
Rule 70    moreelements -> COMMA expression moreelements
Rule 71    moreelements -> epsilon
Rule 72    typedecl -> INT arraydecl
Rule 73    typedecl -> FLOAT arraydecl
Rule 74    typedecl -> STRING arraydecl
Rule 75    arraydecl -> LBRACK RBRACK
Rule 76    arraydecl -> epsilon
Rule 77    epsilon -> <empty>

Terminals, with rules where they appear

ADD_OP               : 16 53
ASSIGN_OP            : 9 10
COLLECT              : 52
COLON_OP             : 36
COMMA                : 14 48 69
DIVIDE_OP            : 19 56
EQ_OP                : 21
FLOAT                : 34 72
FLOATNUMBER          : 63
FUNCTION             : 10
GE_OP                : 24
GT_OP                : 23
ID                   : 9 10 12 14 32 40 45
INT                  : 33 71
INTNUMBER            : 64
LBRACE               : 10 50 50
LBRACK               : 41 66 74
LENGTH               : 32
LE_OP                : 26
LOGAND_OP            : 27
LOGNOT_OP            : 31
LOGOR_OP             : 28
LPAREN               : 10 32 33 34 35 37 45
LT_OP                : 25
MODULO_OP            : 20 57
MULTIPLY_OP          : 18 55
NE_OP                : 22
QUESTION_OP          : 36
RBRACE               : 10 50 50
RBRACK               : 41 66 74
REDUCE               : 51
RETURN               : 10
RPAREN               : 10 32 33 34 35 37 45
SEP                  : 6 7 10 58 58 59
STRING               : 35 73
STRINGCONSTANT       : 65
SUBTRACT_OP          : 17 30 54
TILDE_OP             : 29
error                : 

Nonterminals, with rules where they appear

arglist              : 45
argrest              : 46 48
arraydecl            : 71 72 73
arrayelements        : 66
arrayvalues          : 39
assign               : 5
epsilon              : 4 11 13 15 42 47 49 60 62 68 70 75
expression           : 6 9 10 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 31 33 34 35 36 36 36 37 41 46 48 67 69
exprfuncall          : 43 58 58 59
exprparallel         : 44
funcassign           : 8
goal                 : 0
moreelements         : 67 69
parallelFuncs        : 50
parallelMoreFuncs    : 58 59
parallelOp           : 50
paramlist            : 10
paramrest            : 12 14
pushToSymTable       : 10
reduceinit           : 51
reduceop             : 51
scalarvalue          : 38 61
statement            : 2 3
stmtlist             : 1
stmtrest             : 2 3 10
subscript            : 40
typedecl             : 9 10 12 14
varassign            : 7

Parsing method: LALR

state 0

    (0) S' -> . goal
    (1) goal -> . stmtlist
    (2) stmtlist -> . stmtrest statement
    (3) stmtrest -> . stmtrest statement
    (4) stmtrest -> . epsilon
    (76) epsilon -> .

    SUBTRACT_OP     reduce using rule 76 (epsilon -> .)
    LOGNOT_OP       reduce using rule 76 (epsilon -> .)
    LENGTH          reduce using rule 76 (epsilon -> .)
    INT             reduce using rule 76 (epsilon -> .)
    FLOAT           reduce using rule 76 (epsilon -> .)
    STRING          reduce using rule 76 (epsilon -> .)
    LPAREN          reduce using rule 76 (epsilon -> .)
    ID              reduce using rule 76 (epsilon -> .)
    FLOATNUMBER     reduce using rule 76 (epsilon -> .)
    INTNUMBER       reduce using rule 76 (epsilon -> .)
    STRINGCONSTANT  reduce using rule 76 (epsilon -> .)
    LBRACK          reduce using rule 76 (epsilon -> .)
    LBRACE          reduce using rule 76 (epsilon -> .)

    epsilon                        shift and go to state 1
    stmtrest                       shift and go to state 2
    goal                           shift and go to state 3
    stmtlist                       shift and go to state 4

state 1

    (4) stmtrest -> epsilon .

    SUBTRACT_OP     reduce using rule 4 (stmtrest -> epsilon .)
    LOGNOT_OP       reduce using rule 4 (stmtrest -> epsilon .)
    LENGTH          reduce using rule 4 (stmtrest -> epsilon .)
    INT             reduce using rule 4 (stmtrest -> epsilon .)
    FLOAT           reduce using rule 4 (stmtrest -> epsilon .)
    STRING          reduce using rule 4 (stmtrest -> epsilon .)
    LPAREN          reduce using rule 4 (stmtrest -> epsilon .)
    ID              reduce using rule 4 (stmtrest -> epsilon .)
    FLOATNUMBER     reduce using rule 4 (stmtrest -> epsilon .)
    INTNUMBER       reduce using rule 4 (stmtrest -> epsilon .)
    STRINGCONSTANT  reduce using rule 4 (stmtrest -> epsilon .)
    LBRACK          reduce using rule 4 (stmtrest -> epsilon .)
    LBRACE          reduce using rule 4 (stmtrest -> epsilon .)
    RETURN          reduce using rule 4 (stmtrest -> epsilon .)


state 2

    (2) stmtlist -> stmtrest . statement
    (3) stmtrest -> stmtrest . statement
    (5) statement -> . assign
    (6) statement -> . expression SEP
    (7) assign -> . varassign SEP
    (8) assign -> . funcassign
    (16) expression -> . expression ADD_OP expression
    (17) expression -> . expression SUBTRACT_OP expression
    (18) expression -> . expression MULTIPLY_OP expression
    (19) expression -> . expression DIVIDE_OP expression
    (20) expression -> . expression MODULO_OP expression
    (21) expression -> . expression EQ_OP expression
    (22) expression -> . expression NE_OP expression
    (23) expression -> . expression GT_OP expression
    (24) expression -> . expression GE_OP expression
    (25) expression -> . expression LT_OP expression
    (26) expression -> . expression LE_OP expression
    (27) expression -> . expression LOGAND_OP expression
    (28) expression -> . expression LOGOR_OP expression
    (29) expression -> . expression TILDE_OP expression
    (30) expression -> . SUBTRACT_OP expression
    (31) expression -> . LOGNOT_OP expression
    (32) expression -> . LENGTH LPAREN ID RPAREN
    (33) expression -> . INT LPAREN expression RPAREN
    (34) expression -> . FLOAT LPAREN expression RPAREN
    (35) expression -> . STRING LPAREN expression RPAREN
    (36) expression -> . expression QUESTION_OP expression COLON_OP expression
    (37) expression -> . LPAREN expression RPAREN
    (38) expression -> . scalarvalue
    (39) expression -> . arrayvalues
    (40) expression -> . ID subscript
    (43) expression -> . exprfuncall
    (44) expression -> . exprparallel
    (9) varassign -> . typedecl ID ASSIGN_OP expression
    (10) funcassign -> . typedecl ID ASSIGN_OP FUNCTION LPAREN paramlist pushToSymTable RPAREN LBRACE stmtrest RETURN expression SEP RBRACE
    (63) scalarvalue -> . FLOATNUMBER
    (64) scalarvalue -> . INTNUMBER
    (65) scalarvalue -> . STRINGCONSTANT
    (66) arrayvalues -> . LBRACK arrayelements RBRACK
    (45) exprfuncall -> . ID LPAREN arglist RPAREN
    (50) exprparallel -> . LBRACE LBRACE parallelOp parallelFuncs RBRACE RBRACE
    (71) typedecl -> . INT arraydecl
    (72) typedecl -> . FLOAT arraydecl
    (73) typedecl -> . STRING arraydecl

    SUBTRACT_OP     shift and go to state 9
    LOGNOT_OP       shift and go to state 19
    LENGTH          shift and go to state 25
    INT             shift and go to state 13
    FLOAT           shift and go to state 21
    STRING          shift and go to state 14
    LPAREN          shift and go to state 15
    ID              shift and go to state 16
    FLOATNUMBER     shift and go to state 5
    INTNUMBER       shift and go to state 10
    STRINGCONSTANT  shift and go to state 8
    LBRACK          shift and go to state 22
    LBRACE          shift and go to state 18

    typedecl                       shift and go to state 23
    exprparallel                   shift and go to state 6
    scalarvalue                    shift and go to state 20
    exprfuncall                    shift and go to state 7
    varassign                      shift and go to state 24
    statement                      shift and go to state 11
    arrayvalues                    shift and go to state 12
    expression                     shift and go to state 26
    assign                         shift and go to state 27
    funcassign                     shift and go to state 17

state 3

    (0) S' -> goal .



state 4

    (1) goal -> stmtlist .

    $end            reduce using rule 1 (goal -> stmtlist .)


state 5

    (63) scalarvalue -> FLOATNUMBER .

    ADD_OP          reduce using rule 63 (scalarvalue -> FLOATNUMBER .)
    SUBTRACT_OP     reduce using rule 63 (scalarvalue -> FLOATNUMBER .)
    MULTIPLY_OP     reduce using rule 63 (scalarvalue -> FLOATNUMBER .)
    DIVIDE_OP       reduce using rule 63 (scalarvalue -> FLOATNUMBER .)
    MODULO_OP       reduce using rule 63 (scalarvalue -> FLOATNUMBER .)
    EQ_OP           reduce using rule 63 (scalarvalue -> FLOATNUMBER .)
    NE_OP           reduce using rule 63 (scalarvalue -> FLOATNUMBER .)
    GT_OP           reduce using rule 63 (scalarvalue -> FLOATNUMBER .)
    GE_OP           reduce using rule 63 (scalarvalue -> FLOATNUMBER .)
    LT_OP           reduce using rule 63 (scalarvalue -> FLOATNUMBER .)
    LE_OP           reduce using rule 63 (scalarvalue -> FLOATNUMBER .)
    LOGAND_OP       reduce using rule 63 (scalarvalue -> FLOATNUMBER .)
    LOGOR_OP        reduce using rule 63 (scalarvalue -> FLOATNUMBER .)
    TILDE_OP        reduce using rule 63 (scalarvalue -> FLOATNUMBER .)
    QUESTION_OP     reduce using rule 63 (scalarvalue -> FLOATNUMBER .)
    COMMA           reduce using rule 63 (scalarvalue -> FLOATNUMBER .)
    RPAREN          reduce using rule 63 (scalarvalue -> FLOATNUMBER .)
    SEP             reduce using rule 63 (scalarvalue -> FLOATNUMBER .)
    COLON_OP        reduce using rule 63 (scalarvalue -> FLOATNUMBER .)
    RBRACK          reduce using rule 63 (scalarvalue -> FLOATNUMBER .)
    ID              reduce using rule 63 (scalarvalue -> FLOATNUMBER .)


state 6

    (44) expression -> exprparallel .

    ADD_OP          reduce using rule 44 (expression -> exprparallel .)
    SUBTRACT_OP     reduce using rule 44 (expression -> exprparallel .)
    MULTIPLY_OP     reduce using rule 44 (expression -> exprparallel .)
    DIVIDE_OP       reduce using rule 44 (expression -> exprparallel .)
    MODULO_OP       reduce using rule 44 (expression -> exprparallel .)
    EQ_OP           reduce using rule 44 (expression -> exprparallel .)
    NE_OP           reduce using rule 44 (expression -> exprparallel .)
    GT_OP           reduce using rule 44 (expression -> exprparallel .)
    GE_OP           reduce using rule 44 (expression -> exprparallel .)
    LT_OP           reduce using rule 44 (expression -> exprparallel .)
    LE_OP           reduce using rule 44 (expression -> exprparallel .)
    LOGAND_OP       reduce using rule 44 (expression -> exprparallel .)
    LOGOR_OP        reduce using rule 44 (expression -> exprparallel .)
    TILDE_OP        reduce using rule 44 (expression -> exprparallel .)
    QUESTION_OP     reduce using rule 44 (expression -> exprparallel .)
    SEP             reduce using rule 44 (expression -> exprparallel .)
    RPAREN          reduce using rule 44 (expression -> exprparallel .)
    COMMA           reduce using rule 44 (expression -> exprparallel .)
    RBRACK          reduce using rule 44 (expression -> exprparallel .)
    COLON_OP        reduce using rule 44 (expression -> exprparallel .)


state 7

    (43) expression -> exprfuncall .

    ADD_OP          reduce using rule 43 (expression -> exprfuncall .)
    SUBTRACT_OP     reduce using rule 43 (expression -> exprfuncall .)
    MULTIPLY_OP     reduce using rule 43 (expression -> exprfuncall .)
    DIVIDE_OP       reduce using rule 43 (expression -> exprfuncall .)
    MODULO_OP       reduce using rule 43 (expression -> exprfuncall .)
    EQ_OP           reduce using rule 43 (expression -> exprfuncall .)
    NE_OP           reduce using rule 43 (expression -> exprfuncall .)
    GT_OP           reduce using rule 43 (expression -> exprfuncall .)
    GE_OP           reduce using rule 43 (expression -> exprfuncall .)
    LT_OP           reduce using rule 43 (expression -> exprfuncall .)
    LE_OP           reduce using rule 43 (expression -> exprfuncall .)
    LOGAND_OP       reduce using rule 43 (expression -> exprfuncall .)
    LOGOR_OP        reduce using rule 43 (expression -> exprfuncall .)
    TILDE_OP        reduce using rule 43 (expression -> exprfuncall .)
    QUESTION_OP     reduce using rule 43 (expression -> exprfuncall .)
    SEP             reduce using rule 43 (expression -> exprfuncall .)
    RPAREN          reduce using rule 43 (expression -> exprfuncall .)
    COMMA           reduce using rule 43 (expression -> exprfuncall .)
    RBRACK          reduce using rule 43 (expression -> exprfuncall .)
    COLON_OP        reduce using rule 43 (expression -> exprfuncall .)


state 8

    (65) scalarvalue -> STRINGCONSTANT .

    ADD_OP          reduce using rule 65 (scalarvalue -> STRINGCONSTANT .)
    SUBTRACT_OP     reduce using rule 65 (scalarvalue -> STRINGCONSTANT .)
    MULTIPLY_OP     reduce using rule 65 (scalarvalue -> STRINGCONSTANT .)
    DIVIDE_OP       reduce using rule 65 (scalarvalue -> STRINGCONSTANT .)
    MODULO_OP       reduce using rule 65 (scalarvalue -> STRINGCONSTANT .)
    EQ_OP           reduce using rule 65 (scalarvalue -> STRINGCONSTANT .)
    NE_OP           reduce using rule 65 (scalarvalue -> STRINGCONSTANT .)
    GT_OP           reduce using rule 65 (scalarvalue -> STRINGCONSTANT .)
    GE_OP           reduce using rule 65 (scalarvalue -> STRINGCONSTANT .)
    LT_OP           reduce using rule 65 (scalarvalue -> STRINGCONSTANT .)
    LE_OP           reduce using rule 65 (scalarvalue -> STRINGCONSTANT .)
    LOGAND_OP       reduce using rule 65 (scalarvalue -> STRINGCONSTANT .)
    LOGOR_OP        reduce using rule 65 (scalarvalue -> STRINGCONSTANT .)
    TILDE_OP        reduce using rule 65 (scalarvalue -> STRINGCONSTANT .)
    QUESTION_OP     reduce using rule 65 (scalarvalue -> STRINGCONSTANT .)
    COMMA           reduce using rule 65 (scalarvalue -> STRINGCONSTANT .)
    RPAREN          reduce using rule 65 (scalarvalue -> STRINGCONSTANT .)
    SEP             reduce using rule 65 (scalarvalue -> STRINGCONSTANT .)
    COLON_OP        reduce using rule 65 (scalarvalue -> STRINGCONSTANT .)
    RBRACK          reduce using rule 65 (scalarvalue -> STRINGCONSTANT .)
    ID              reduce using rule 65 (scalarvalue -> STRINGCONSTANT .)


state 9

    (30) expression -> SUBTRACT_OP . expression
    (16) expression -> . expression ADD_OP expression
    (17) expression -> . expression SUBTRACT_OP expression
    (18) expression -> . expression MULTIPLY_OP expression
    (19) expression -> . expression DIVIDE_OP expression
    (20) expression -> . expression MODULO_OP expression
    (21) expression -> . expression EQ_OP expression
    (22) expression -> . expression NE_OP expression
    (23) expression -> . expression GT_OP expression
    (24) expression -> . expression GE_OP expression
    (25) expression -> . expression LT_OP expression
    (26) expression -> . expression LE_OP expression
    (27) expression -> . expression LOGAND_OP expression
    (28) expression -> . expression LOGOR_OP expression
    (29) expression -> . expression TILDE_OP expression
    (30) expression -> . SUBTRACT_OP expression
    (31) expression -> . LOGNOT_OP expression
    (32) expression -> . LENGTH LPAREN ID RPAREN
    (33) expression -> . INT LPAREN expression RPAREN
    (34) expression -> . FLOAT LPAREN expression RPAREN
    (35) expression -> . STRING LPAREN expression RPAREN
    (36) expression -> . expression QUESTION_OP expression COLON_OP expression
    (37) expression -> . LPAREN expression RPAREN
    (38) expression -> . scalarvalue
    (39) expression -> . arrayvalues
    (40) expression -> . ID subscript
    (43) expression -> . exprfuncall
    (44) expression -> . exprparallel
    (63) scalarvalue -> . FLOATNUMBER
    (64) scalarvalue -> . INTNUMBER
    (65) scalarvalue -> . STRINGCONSTANT
    (66) arrayvalues -> . LBRACK arrayelements RBRACK
    (45) exprfuncall -> . ID LPAREN arglist RPAREN
    (50) exprparallel -> . LBRACE LBRACE parallelOp parallelFuncs RBRACE RBRACE

    SUBTRACT_OP     shift and go to state 9
    LOGNOT_OP       shift and go to state 19
    LENGTH          shift and go to state 25
    INT             shift and go to state 30
    FLOAT           shift and go to state 29
    STRING          shift and go to state 28
    LPAREN          shift and go to state 15
    ID              shift and go to state 16
    FLOATNUMBER     shift and go to state 5
    INTNUMBER       shift and go to state 10
    STRINGCONSTANT  shift and go to state 8
    LBRACK          shift and go to state 22
    LBRACE          shift and go to state 18

    exprparallel                   shift and go to state 6
    expression                     shift and go to state 31
    exprfuncall                    shift and go to state 7
    arrayvalues                    shift and go to state 12
    scalarvalue                    shift and go to state 20

state 10

    (64) scalarvalue -> INTNUMBER .

    ADD_OP          reduce using rule 64 (scalarvalue -> INTNUMBER .)
    SUBTRACT_OP     reduce using rule 64 (scalarvalue -> INTNUMBER .)
    MULTIPLY_OP     reduce using rule 64 (scalarvalue -> INTNUMBER .)
    DIVIDE_OP       reduce using rule 64 (scalarvalue -> INTNUMBER .)
    MODULO_OP       reduce using rule 64 (scalarvalue -> INTNUMBER .)
    EQ_OP           reduce using rule 64 (scalarvalue -> INTNUMBER .)
    NE_OP           reduce using rule 64 (scalarvalue -> INTNUMBER .)
    GT_OP           reduce using rule 64 (scalarvalue -> INTNUMBER .)
    GE_OP           reduce using rule 64 (scalarvalue -> INTNUMBER .)
    LT_OP           reduce using rule 64 (scalarvalue -> INTNUMBER .)
    LE_OP           reduce using rule 64 (scalarvalue -> INTNUMBER .)
    LOGAND_OP       reduce using rule 64 (scalarvalue -> INTNUMBER .)
    LOGOR_OP        reduce using rule 64 (scalarvalue -> INTNUMBER .)
    TILDE_OP        reduce using rule 64 (scalarvalue -> INTNUMBER .)
    QUESTION_OP     reduce using rule 64 (scalarvalue -> INTNUMBER .)
    COMMA           reduce using rule 64 (scalarvalue -> INTNUMBER .)
    RPAREN          reduce using rule 64 (scalarvalue -> INTNUMBER .)
    SEP             reduce using rule 64 (scalarvalue -> INTNUMBER .)
    COLON_OP        reduce using rule 64 (scalarvalue -> INTNUMBER .)
    RBRACK          reduce using rule 64 (scalarvalue -> INTNUMBER .)
    ID              reduce using rule 64 (scalarvalue -> INTNUMBER .)


state 11

    (2) stmtlist -> stmtrest statement .
    (3) stmtrest -> stmtrest statement .

    $end            reduce using rule 2 (stmtlist -> stmtrest statement .)
    SUBTRACT_OP     reduce using rule 3 (stmtrest -> stmtrest statement .)
    LOGNOT_OP       reduce using rule 3 (stmtrest -> stmtrest statement .)
    LENGTH          reduce using rule 3 (stmtrest -> stmtrest statement .)
    INT             reduce using rule 3 (stmtrest -> stmtrest statement .)
    FLOAT           reduce using rule 3 (stmtrest -> stmtrest statement .)
    STRING          reduce using rule 3 (stmtrest -> stmtrest statement .)
    LPAREN          reduce using rule 3 (stmtrest -> stmtrest statement .)
    ID              reduce using rule 3 (stmtrest -> stmtrest statement .)
    FLOATNUMBER     reduce using rule 3 (stmtrest -> stmtrest statement .)
    INTNUMBER       reduce using rule 3 (stmtrest -> stmtrest statement .)
    STRINGCONSTANT  reduce using rule 3 (stmtrest -> stmtrest statement .)
    LBRACK          reduce using rule 3 (stmtrest -> stmtrest statement .)
    LBRACE          reduce using rule 3 (stmtrest -> stmtrest statement .)


state 12

    (39) expression -> arrayvalues .

    ADD_OP          reduce using rule 39 (expression -> arrayvalues .)
    SUBTRACT_OP     reduce using rule 39 (expression -> arrayvalues .)
    MULTIPLY_OP     reduce using rule 39 (expression -> arrayvalues .)
    DIVIDE_OP       reduce using rule 39 (expression -> arrayvalues .)
    MODULO_OP       reduce using rule 39 (expression -> arrayvalues .)
    EQ_OP           reduce using rule 39 (expression -> arrayvalues .)
    NE_OP           reduce using rule 39 (expression -> arrayvalues .)
    GT_OP           reduce using rule 39 (expression -> arrayvalues .)
    GE_OP           reduce using rule 39 (expression -> arrayvalues .)
    LT_OP           reduce using rule 39 (expression -> arrayvalues .)
    LE_OP           reduce using rule 39 (expression -> arrayvalues .)
    LOGAND_OP       reduce using rule 39 (expression -> arrayvalues .)
    LOGOR_OP        reduce using rule 39 (expression -> arrayvalues .)
    TILDE_OP        reduce using rule 39 (expression -> arrayvalues .)
    QUESTION_OP     reduce using rule 39 (expression -> arrayvalues .)
    SEP             reduce using rule 39 (expression -> arrayvalues .)
    RPAREN          reduce using rule 39 (expression -> arrayvalues .)
    COMMA           reduce using rule 39 (expression -> arrayvalues .)
    RBRACK          reduce using rule 39 (expression -> arrayvalues .)
    COLON_OP        reduce using rule 39 (expression -> arrayvalues .)


state 13

    (33) expression -> INT . LPAREN expression RPAREN
    (71) typedecl -> INT . arraydecl
    (74) arraydecl -> . LBRACK RBRACK
    (75) arraydecl -> . epsilon
    (76) epsilon -> .

    LPAREN          shift and go to state 34
    LBRACK          shift and go to state 33
    ID              reduce using rule 76 (epsilon -> .)

    epsilon                        shift and go to state 32
    arraydecl                      shift and go to state 35

state 14

    (35) expression -> STRING . LPAREN expression RPAREN
    (73) typedecl -> STRING . arraydecl
    (74) arraydecl -> . LBRACK RBRACK
    (75) arraydecl -> . epsilon
    (76) epsilon -> .

    LPAREN          shift and go to state 36
    LBRACK          shift and go to state 33
    ID              reduce using rule 76 (epsilon -> .)

    epsilon                        shift and go to state 32
    arraydecl                      shift and go to state 37

state 15

    (37) expression -> LPAREN . expression RPAREN
    (16) expression -> . expression ADD_OP expression
    (17) expression -> . expression SUBTRACT_OP expression
    (18) expression -> . expression MULTIPLY_OP expression
    (19) expression -> . expression DIVIDE_OP expression
    (20) expression -> . expression MODULO_OP expression
    (21) expression -> . expression EQ_OP expression
    (22) expression -> . expression NE_OP expression
    (23) expression -> . expression GT_OP expression
    (24) expression -> . expression GE_OP expression
    (25) expression -> . expression LT_OP expression
    (26) expression -> . expression LE_OP expression
    (27) expression -> . expression LOGAND_OP expression
    (28) expression -> . expression LOGOR_OP expression
    (29) expression -> . expression TILDE_OP expression
    (30) expression -> . SUBTRACT_OP expression
    (31) expression -> . LOGNOT_OP expression
    (32) expression -> . LENGTH LPAREN ID RPAREN
    (33) expression -> . INT LPAREN expression RPAREN
    (34) expression -> . FLOAT LPAREN expression RPAREN
    (35) expression -> . STRING LPAREN expression RPAREN
    (36) expression -> . expression QUESTION_OP expression COLON_OP expression
    (37) expression -> . LPAREN expression RPAREN
    (38) expression -> . scalarvalue
    (39) expression -> . arrayvalues
    (40) expression -> . ID subscript
    (43) expression -> . exprfuncall
    (44) expression -> . exprparallel
    (63) scalarvalue -> . FLOATNUMBER
    (64) scalarvalue -> . INTNUMBER
    (65) scalarvalue -> . STRINGCONSTANT
    (66) arrayvalues -> . LBRACK arrayelements RBRACK
    (45) exprfuncall -> . ID LPAREN arglist RPAREN
    (50) exprparallel -> . LBRACE LBRACE parallelOp parallelFuncs RBRACE RBRACE

    SUBTRACT_OP     shift and go to state 9
    LOGNOT_OP       shift and go to state 19
    LENGTH          shift and go to state 25
    INT             shift and go to state 30
    FLOAT           shift and go to state 29
    STRING          shift and go to state 28
    LPAREN          shift and go to state 15
    ID              shift and go to state 16
    FLOATNUMBER     shift and go to state 5
    INTNUMBER       shift and go to state 10
    STRINGCONSTANT  shift and go to state 8
    LBRACK          shift and go to state 22
    LBRACE          shift and go to state 18

    exprparallel                   shift and go to state 6
    expression                     shift and go to state 38
    exprfuncall                    shift and go to state 7
    arrayvalues                    shift and go to state 12
    scalarvalue                    shift and go to state 20

state 16

    (40) expression -> ID . subscript
    (45) exprfuncall -> ID . LPAREN arglist RPAREN
    (41) subscript -> . LBRACK expression RBRACK
    (42) subscript -> . epsilon
    (76) epsilon -> .

    LPAREN          shift and go to state 41
    LBRACK          shift and go to state 40
    SEP             reduce using rule 76 (epsilon -> .)
    ADD_OP          reduce using rule 76 (epsilon -> .)
    SUBTRACT_OP     reduce using rule 76 (epsilon -> .)
    MULTIPLY_OP     reduce using rule 76 (epsilon -> .)
    DIVIDE_OP       reduce using rule 76 (epsilon -> .)
    MODULO_OP       reduce using rule 76 (epsilon -> .)
    EQ_OP           reduce using rule 76 (epsilon -> .)
    NE_OP           reduce using rule 76 (epsilon -> .)
    GT_OP           reduce using rule 76 (epsilon -> .)
    GE_OP           reduce using rule 76 (epsilon -> .)
    LT_OP           reduce using rule 76 (epsilon -> .)
    LE_OP           reduce using rule 76 (epsilon -> .)
    LOGAND_OP       reduce using rule 76 (epsilon -> .)
    LOGOR_OP        reduce using rule 76 (epsilon -> .)
    TILDE_OP        reduce using rule 76 (epsilon -> .)
    QUESTION_OP     reduce using rule 76 (epsilon -> .)
    RPAREN          reduce using rule 76 (epsilon -> .)
    COMMA           reduce using rule 76 (epsilon -> .)
    RBRACK          reduce using rule 76 (epsilon -> .)
    COLON_OP        reduce using rule 76 (epsilon -> .)

    epsilon                        shift and go to state 39
    subscript                      shift and go to state 42

state 17

    (8) assign -> funcassign .

    RETURN          reduce using rule 8 (assign -> funcassign .)
    SUBTRACT_OP     reduce using rule 8 (assign -> funcassign .)
    LOGNOT_OP       reduce using rule 8 (assign -> funcassign .)
    LENGTH          reduce using rule 8 (assign -> funcassign .)
    INT             reduce using rule 8 (assign -> funcassign .)
    FLOAT           reduce using rule 8 (assign -> funcassign .)
    STRING          reduce using rule 8 (assign -> funcassign .)
    LPAREN          reduce using rule 8 (assign -> funcassign .)
    ID              reduce using rule 8 (assign -> funcassign .)
    FLOATNUMBER     reduce using rule 8 (assign -> funcassign .)
    INTNUMBER       reduce using rule 8 (assign -> funcassign .)
    STRINGCONSTANT  reduce using rule 8 (assign -> funcassign .)
    LBRACK          reduce using rule 8 (assign -> funcassign .)
    LBRACE          reduce using rule 8 (assign -> funcassign .)
    $end            reduce using rule 8 (assign -> funcassign .)


state 18

    (50) exprparallel -> LBRACE . LBRACE parallelOp parallelFuncs RBRACE RBRACE

    LBRACE          shift and go to state 43


state 19

    (31) expression -> LOGNOT_OP . expression
    (16) expression -> . expression ADD_OP expression
    (17) expression -> . expression SUBTRACT_OP expression
    (18) expression -> . expression MULTIPLY_OP expression
    (19) expression -> . expression DIVIDE_OP expression
    (20) expression -> . expression MODULO_OP expression
    (21) expression -> . expression EQ_OP expression
    (22) expression -> . expression NE_OP expression
    (23) expression -> . expression GT_OP expression
    (24) expression -> . expression GE_OP expression
    (25) expression -> . expression LT_OP expression
    (26) expression -> . expression LE_OP expression
    (27) expression -> . expression LOGAND_OP expression
    (28) expression -> . expression LOGOR_OP expression
    (29) expression -> . expression TILDE_OP expression
    (30) expression -> . SUBTRACT_OP expression
    (31) expression -> . LOGNOT_OP expression
    (32) expression -> . LENGTH LPAREN ID RPAREN
    (33) expression -> . INT LPAREN expression RPAREN
    (34) expression -> . FLOAT LPAREN expression RPAREN
    (35) expression -> . STRING LPAREN expression RPAREN
    (36) expression -> . expression QUESTION_OP expression COLON_OP expression
    (37) expression -> . LPAREN expression RPAREN
    (38) expression -> . scalarvalue
    (39) expression -> . arrayvalues
    (40) expression -> . ID subscript
    (43) expression -> . exprfuncall
    (44) expression -> . exprparallel
    (63) scalarvalue -> . FLOATNUMBER
    (64) scalarvalue -> . INTNUMBER
    (65) scalarvalue -> . STRINGCONSTANT
    (66) arrayvalues -> . LBRACK arrayelements RBRACK
    (45) exprfuncall -> . ID LPAREN arglist RPAREN
    (50) exprparallel -> . LBRACE LBRACE parallelOp parallelFuncs RBRACE RBRACE

    SUBTRACT_OP     shift and go to state 9
    LOGNOT_OP       shift and go to state 19
    LENGTH          shift and go to state 25
    INT             shift and go to state 30
    FLOAT           shift and go to state 29
    STRING          shift and go to state 28
    LPAREN          shift and go to state 15
    ID              shift and go to state 16
    FLOATNUMBER     shift and go to state 5
    INTNUMBER       shift and go to state 10
    STRINGCONSTANT  shift and go to state 8
    LBRACK          shift and go to state 22
    LBRACE          shift and go to state 18

    exprparallel                   shift and go to state 6
    expression                     shift and go to state 44
    exprfuncall                    shift and go to state 7
    arrayvalues                    shift and go to state 12
    scalarvalue                    shift and go to state 20

state 20

    (38) expression -> scalarvalue .
